--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,13 +45,21 @@
                 <TextView
                     style="@style/headerText"
                     android:layout_gravity="center"
-                    android:layout_marginTop="40dp" />
+                    android:layout_marginTop="42dp"
+                    android:text="@string/app_name"/>
 
                 <include layout="@layout/layout_login" />
 
             </LinearLayout>
 
-
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="30dp"
+                android:src="@drawable/ic_settings_32" />
         </RelativeLayout>
 
     </ScrollView>
