--- a/app/src/main/res/layout/layout_login.xml
+++ b/app/src/main/res/layout/layout_login.xml
@@ -8,7 +8,7 @@
     android:layout_gravity="center"
     android:layout_marginTop="@dimen/loginViewsMargin"
     android:layout_marginBottom="@dimen/loginViewsMargin"
-    android:background="@color/whiteCardColor">
+    android:background="@color/white">
 
 
 
@@ -18,10 +18,13 @@
         android:padding="@dimen/loginViewsMargin">
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             style="@style/headerTextPrimary"
-            android:text="@string/loginTitle"
             android:layout_marginTop="@dimen/loginViewsMargin"
-            android:textAllCaps="true"/>
+            android:textAllCaps="true"
+            app:drawableEndCompat="@drawable/lock" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputEmail"
@@ -31,9 +34,11 @@
             <EditText
                 android:id="@+id/unameEdt"
                 style="@style/modifiedEditText"
-                android:inputType="textEmailAddress"
+                android:inputType="textPersonName"
                 android:maxLines="1"
                 android:hint="@string/username"
+                android:textAlignment="viewStart"
+
                 />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -46,23 +51,25 @@
                 style="@style/modifiedEditText"
                 android:hint="@string/password"
                 android:maxLines="1"
-                android:inputType="textPassword"/>
+                android:inputType="textPassword"
+                android:textAlignment="viewStart"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
             android:id="@+id/loginBtn"
             app:spinning_bar_width="4dp"
-            app:spinning_bar_color="#FFF"
+            app:spinning_bar_color="@color/white"
             android:text="@string/loginTitle"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/loginViewsMargin"
+            android:layout_marginTop="27dp"
             app:spinning_bar_padding="6dp"
             app:initialCornerAngle="27dp"
             android:textStyle="bold"
             android:background="@drawable/login_button_bk"
-            android:textColor="@color/whiteTextColor"
+            android:textColor="@color/white"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content" />
+            android:layout_width="wrap_content"
+            android:textSize="18sp"/>
 
 
 
