--- a/app/src/main/res/drawable/login_shape_bk.xml
+++ b/app/src/main/res/drawable/login_shape_bk.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
     <corners
         android:bottomLeftRadius="27dp"
         android:bottomRightRadius="27dp"
         android:topLeftRadius="0dp"
-        android:topRightRadius="0dp"
-        />
-    <solid
-        android:color="@color/purple_500"
-        />
+        android:topRightRadius="0dp" />
+    <solid android:color="@color/purple_500" />
     <size
         android:width="182dp"
-        android:height="58dp"
-        />
+        android:height="58dp" />
 </shape>
