--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,9 +11,11 @@
     <color name="colorPrimary">#1F5BF3</color>
     <color name="colorPrimaryLight">#8D79FD</color>
     <color name="blue">#5C98FF</color>
+    <color name="red">#FF0000</color>
 
     <color name="primaryTextColor">#00a5ff</color>
     <color name="loginBkColor">#f0f0f0</color>
 
-    <color name="orange">#FFB129</color>
+    <color name="orange">#FFAC35</color>
+    <color name="no_color">#00FFFFFF</color>
 </resources>
