--- a/app/src/main/res/drawable/blue_gray_gradient.xml
+++ b/app/src/main/res/drawable/blue_gray_gradient.xml
@@ -4,9 +4,11 @@
         <shape>
             <gradient
                 android:angle="90"
-                android:startColor="#C8575757"
-                android:endColor="#FFFFFF"
+                android:startColor="#989898"
+                android:endColor="#4F81A9"
                 android:type="linear" />
+
+
         </shape>
     </item>
 </selector>
