--- a/app/src/main/res/drawable/orange_gradient.xml
+++ b/app/src/main/res/drawable/orange_gradient.xml
@@ -3,10 +3,10 @@
     android:shape="rectangle">
     <corners android:radius="27dp" />
     <gradient
-        android:angle="45"
+        android:angle="90"
         android:centerX="35%"
-        android:endColor="@color/blue"
-        android:startColor="@color/purple_200"
+        android:endColor="@color/orange"
+        android:startColor="@color/yellow"
         android:type="linear" />
 
 </shape>
