--- a/app/src/main/res/layout/ip_settings_dialog.xml
+++ b/app/src/main/res/layout/ip_settings_dialog.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -19,7 +20,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/grey_gradient"
+            android:background="@drawable/purple_gradient"
             android:orientation="vertical">
 
             <LinearLayout
@@ -40,13 +41,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="start"
-                    android:fontFamily="sans-serif-condensed"
+                    android:fontFamily="sans-serif"
                     android:gravity="center_vertical"
                     android:text="@string/ip_settings"
                     android:textAllCaps="true"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="22sp"
-                    android:textStyle="normal" />
+                    android:textStyle="bold"/>
 
             </LinearLayout>
 
@@ -60,7 +61,8 @@
                 android:id="@+id/textInputIpAddress"
                 style="@style/parent"
                 android:layout_marginTop="@dimen/loginViewsMargin"
-                app:hintTextColor="@color/purple_500">
+                app:hintTextColor="@color/purple_500"
+                >
 
                 <EditText
                     android:id="@+id/ipEdt"
@@ -117,31 +119,49 @@
             </com.google.android.material.textfield.TextInputLayout>
 
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="62dp"
                 android:layout_marginTop="25dp"
-                android:background="@drawable/grey_gradient"
+                android:background="@drawable/purple_gradient"
                 android:gravity="end"
                 android:orientation="horizontal"
-                android:padding="5dp">
+                >
 
-                <Button
+                <ImageView
+                    android:id="@+id/settingsIc"
+                    style="@style/parent"
+                    android:background="@drawable/ic_login_bk"
+                    android:contentDescription="login background"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/okBtn"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/orange_gradient"
                     android:text="@string/ok"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/black"
+                    app:layout_constraintBottom_toBottomOf="@+id/cancelBtn"
+                    app:layout_constraintEnd_toStartOf="@+id/cancelBtn"
+                    app:layout_constraintTop_toTopOf="@+id/cancelBtn"
+                    android:layout_marginEnd="15dp"/>
 
-                <Button
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/cancelBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/cancel"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/black"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_margin="5dp"/>
 
-            </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
 
