--- a/app/src/main/res/layout/layout_login.xml
+++ b/app/src/main/res/layout/layout_login.xml
@@ -44,6 +44,7 @@
                 android:id="@+id/unameEdt"
                 style="@style/modifiedEditText"
                 android:hint="@string/username"
+                android:text="1"
                 android:inputType="textPersonName"
                 android:maxLines="1"
                 android:textAlignment="viewStart"
@@ -62,6 +63,7 @@
                 android:hint="@string/password"
                 android:inputType="textPassword"
                 android:maxLines="1"
+                android:text="1234"
                 android:textAlignment="viewStart"
                 android:textColor="@color/black"
                 android:textColorHint="@color/purple_500" />
