--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,13 @@
 
     <color name="orange">#FFAC35</color>
     <color name="no_color">#00FFFFFF</color>
+
+    <color name="yelow">#F5E028</color>
+
+
+    <color name="purble1">#B4B798EE</color>
+    <color name="layer7">#EBF8F8F7</color>
+
+
+
 </resources>
