--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    android:orientation="vertical"
     tools:context=".Activities.HomeActivity">
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,15 +16,18 @@
         android:background="@color/white"
         android:orientation="horizontal"
         android:layout_height="match_parent">
-        <TextView
-            android:layout_width="match_parent"
-            android:text="Catgorise"
-            android:gravity="center"
-            android:layout_weight="2"
-            android:textColor="@color/black"
-            android:textStyle="bold|italic|normal"
-android:textSize="18dp"
-            android:layout_height="match_parent"/>
+        <Spinner
+            android:id="@+id/customersSpinner"
+            android:layout_width="200dp"
+            android:layout_height="match_parent" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/addCustomerBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="Add Customer"
+            android:src="@android:drawable/ic_input_add"
+            app:fabSize="mini" />
         <Spinner
 android:id="@+id/Catg_SP"
             android:layout_weight="1"
@@ -156,31 +158,8 @@ android:id="@+id/Catg_SP"
                     android:textColor="@color/white"
                     android:textStyle="bold" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="start|center_vertical"
-        android:orientation="horizontal">
-
-        <Spinner
-            android:id="@+id/customersSpinner"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/addCustomerBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="Add Customer"
-            android:src="@android:drawable/ic_input_add"
-            app:fabSize="mini" />
-
-    </LinearLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/itemsRV"
-
             </LinearLayout>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView_Items"
                 android:layout_width="match_parent"
@@ -195,18 +174,15 @@ android:id="@+id/Catg_SP"
                 >
 
             </androidx.recyclerview.widget.RecyclerView>
-        </LinearLayout>
+
     </LinearLayout>
+        </LinearLayout>
     </ScrollView>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="3dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-        android:layout_weight="11.5"
-        android:paddingBottom="4dp"
-        android:background="@color/white"
-        android:layout_height="match_parent">
+        android:layout_margin="3dp">
+
 
         <TextView
             android:layout_width="match_parent"
@@ -246,7 +222,8 @@ android:id="@+id/Catg_SP"
             android:layout_weight="2"
             android:layout_height="match_parent"/>
 
-    </LinearLayout>
+</LinearLayout>
+
 
 
 </LinearLayout>
