--- a/app/src/main/res/drawable/cancel_btn.xml
+++ b/app/src/main/res/drawable/cancel_btn.xml
@@ -2,15 +2,11 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <gradient
-                android:startColor="#FCFDFDFB"
-                android:endColor="#E8F8F8F7"
-                android:angle="270" />
-            <stroke android:width="1dp"
-                android:color="@color/red"/>
+            <solid android:color="@color/white" />
 
-            <corners
-                android:radius="25dp" />
+            <stroke android:width="1dp" android:color="@color/primaryTextColor" />
+
+            <corners android:radius="10dp" />
 
         </shape>
     </item>
