--- a/app/src/main/res/layout/ip_settings_dialog.xml
+++ b/app/src/main/res/layout/ip_settings_dialog.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -13,41 +12,31 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:strokeColor="@color/white"
-        app:strokeWidth="2dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/purple_gradient"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
-                android:gravity="start|center_vertical"
+                android:gravity="center"
                 android:orientation="horizontal">
 
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    app:drawableStartCompat="@drawable/settings" />
-
-                <TextView
-                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="start"
-                    android:fontFamily="sans-serif"
+                    android:fontFamily="@font/alegreya_medium"
                     android:gravity="center_vertical"
                     android:text="@string/ip_settings"
-                    android:textAllCaps="true"
-                    android:textColor="@color/white"
-                    android:textSize="22sp"
-                    android:textStyle="bold"/>
+                    android:textAllCaps="false"
+                    android:textColor="@color/primaryTextColor"
+                    android:textSize="30sp" />
 
             </LinearLayout>
 
@@ -56,112 +45,134 @@
                 android:layout_height="2dp"
                 android:background="@color/grey" />
 
-
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputIpAddress"
-                style="@style/parent"
-                android:layout_marginTop="@dimen/loginViewsMargin"
-                app:hintTextColor="@color/purple_500"
-                >
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginTop="46dp"
+                android:hint="@string/ip_address"
+                app:boxCornerRadiusBottomEnd="10dp"
+                app:boxCornerRadiusBottomStart="10dp"
+                app:boxCornerRadiusTopEnd="10dp"
+                app:boxCornerRadiusTopStart="10dp">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/ipEdt"
-                    style="@style/modifiedEditText"
-                    android:layout_marginHorizontal="20dp"
-                    android:background="@drawable/edt_back"
-                    android:hint="@string/ip_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:inputType="text"
-                    android:maxLines="1"
-                    android:textAlignment="viewStart"
-                    android:textColor="@color/black"
-                    android:textColorHint="@color/purple_500" />
+                    android:maxLines="1" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
+
+            <!--            <com.google.android.material.textfield.TextInputLayout-->
+            <!--                android:id="@+id/textInputIpAddress"-->
+            <!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_marginTop="@dimen/loginViewsMargin"-->
+            <!--                android:hint="@string/ip_address"-->
+            <!--                app:boxStrokeColor="@color/primaryTextColor"-->
+            <!--                app:boxStrokeWidth="1dp">-->
+
+            <!--                <com.google.android.material.textfield.TextInputEditText-->
+            <!--                    android:id="@+id/ipEdt"-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:layout_marginHorizontal="20dp"-->
+            <!--                    android:inputType="text"-->
+            <!--                    android:maxLines="1"-->
+            <!--                    android:textAlignment="viewStart"-->
+            <!--                    android:textColor="@color/black" />-->
+
+            <!--            </com.google.android.material.textfield.TextInputLayout>-->
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputPort"
-                style="@style/parent"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="@dimen/loginViewsMargin"
-                app:hintTextColor="@color/purple_500">
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginTop="26dp"
+                android:hint="@string/ip_port"
+                app:boxCornerRadiusBottomEnd="10dp"
+                app:boxCornerRadiusBottomStart="10dp"
+                app:boxCornerRadiusTopEnd="10dp"
+                app:boxCornerRadiusTopStart="10dp">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/portEdt"
-                    style="@style/modifiedEditText"
-                    android:background="@drawable/edt_back"
-                    android:hint="@string/ip_port"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:inputType="number"
-                    android:maxLines="1"
-                    android:textAlignment="viewStart"
-                    android:textColor="@color/black"
-                    android:textColorHint="@color/purple_500" />
+                    android:maxLines="1" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputCoNo"
-                style="@style/parent"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="@dimen/loginViewsMargin">
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginTop="26dp"
+                android:hint="@string/company_no"
+                app:boxCornerRadiusBottomEnd="10dp"
+                app:boxCornerRadiusBottomStart="10dp"
+                app:boxCornerRadiusTopEnd="10dp"
+                app:boxCornerRadiusTopStart="10dp">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/coNoEdt"
-                    style="@style/modifiedEditText"
-                    android:background="@drawable/edt_back"
-                    android:hint="@string/company_no"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:inputType="number"
                     android:maxLines="1"
-                    android:textAlignment="viewStart"
-                    android:textColor="@color/black"
-                    android:textColorHint="@color/purple_500"
-                    app:hintTextColor="@color/purple_500" />
+                    android:textAlignment="viewStart" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="62dp"
-                android:layout_marginTop="25dp"
-                android:background="@drawable/purple_gradient"
-                android:gravity="end"
-                android:orientation="horizontal"
-                >
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginTop="36dp"
+                android:background="@color/white"
+                android:gravity="center_horizontal|top"
+                android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/settingsIc"
-                    style="@style/parent"
-                    android:background="@drawable/ic_login_bk"
-                    android:contentDescription="login background"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/okBtn"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:background="@drawable/orange_gradient"
+                    android:layout_marginEnd="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/bg_btn"
                     android:text="@string/ok"
-                    android:textColor="@color/black"
-                    app:layout_constraintBottom_toBottomOf="@+id/cancelBtn"
-                    app:layout_constraintEnd_toStartOf="@+id/cancelBtn"
-                    app:layout_constraintTop_toTopOf="@+id/cancelBtn"
-                    android:layout_marginEnd="15dp"/>
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:fontFamily="@font/alegreya_sans_medium"/>
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/cancelBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginBottom="40dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/cancel_btn"
                     android:text="@string/cancel"
-                    android:textColor="@color/black"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_margin="5dp"/>
+                    android:textColor="@color/primaryTextColor"
+                    android:textSize="18sp"
+                    android:fontFamily="@font/alegreya_sans_medium"
+                    android:textAllCaps="false"/>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
 
         </LinearLayout>
 
