--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,7 +18,8 @@
         android:layout_height="match_parent">
         <Spinner
             android:id="@+id/customersSpinner"
-            android:layout_width="200dp"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -43,6 +44,7 @@ android:id="@+id/Catg_SP"
 
         <HorizontalScrollView
             android:layout_width="match_parent"
+
             android:layout_height="fill_parent"
             android:layout_below="@+id/seatLegendLayout">
 
@@ -60,6 +62,7 @@ android:id="@+id/Catg_SP"
                     <GridView
                         android:id="@+id/simpleGridView"
                         android:layout_width="match_parent"
+                        android:scrollbarThumbHorizontal="@drawable/scrollbar_vertical_thumb"
                         android:layout_height="match_parent"
                         android:layout_margin="4dp"
                         android:columnWidth="100dp"
@@ -209,7 +212,7 @@ android:id="@+id/Catg_SP"
         <androidx.appcompat.widget.AppCompatButton
             android:layout_width="match_parent"
             android:text="طلب"
-            android:id="@+id/btn1"
+            android:id="@+id/orderbtn"
             android:textSize="30sp"
 
             android:paddingTop="2dp"
